crates/es-fluent-core/tests/snapshots/json_snapshots_tests__json_snapshot_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/json_snapshots_tests.rs
expression: "&type_info"
---
{
  "type_kind": "Struct",
  "type_name": "ErrorType",
  "variants": [
    {
      "name": "Network",
      "ftl_key": "error_type-Network",
      "args": [
        "code",
        "message"
      ]
    },
    {
      "name": "Io",
      "ftl_key": "error_type-Io",
      "args": []
    }
  ],
  "file_path": null
}
