crates/es-fluent-core/tests/snapshots/json_snapshots_tests__json_snapshot_ftl_variant.snap
---
source: crates/es-fluent-core/tests/json_snapshots_tests.rs
expression: "&variant"
---
{
  "name": "Network",
  "ftl_key": "error_type-Network",
  "args": [
    "code",
    "message"
  ]
}
